<resources>
    <string name="app_name">Inventory App</string>

    <!-- Labels for the overflow menu -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_items">Delete All Items</string>

    <!-- Message for StockActivity -->
    <string name="empty_view_text">The shelves look a bit empty…\nGet started by adding an item!</string>
    <string name="quantity_label">Quantity:</string>
    <string name="price_label">Price: £</string>

    <!-- Dialog messages for StockActivity -->
    <string name="dialog_delete_all_products">Delete all products?</string>
    <string name="dialog_delete_all_confirm">Delete</string>
    <string name="dialog_delete_all_cancel">Cancel</string>

    <!-- Toast messages for StockActivity -->
    <string name="stock_delete_all_failed">Error encountered when deleting products</string>
    <string name="stock_delete_all_success">All products deleted successfully</string>
    <string name="stock_update_failed">Error encountered when processing sale</string>
    <string name="stock_quantity_warning">Quantity cannot go below zero</string>

    <!-- Labels for EditorActivity menu options -->
    <string name="action_save_product">Save</string>
    <string name="action_delete_product">Delete</string>

    <!-- Labels for options in EditorActivity -->
    <string name="label_product_details">Product Details</string>
    <string name="label_stock_details">Stock Details</string>
    <string name="label_supplier_details">Supplier Details</string>
    <string name="label_call_supplier">Call</string>

    <!-- Hints for fields in EditorActivity -->
    <string name="hint_name">Name</string>
    <string name="hint_item_price">Price (£)</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_supplier_phone_number">Phone Number</string>
    <string name="add_item">Add Item</string>

    <!-- Toast messages for EditorActivity -->
    <string name="editor_insert_product_failed">Error encountered when adding product</string>
    <string name="editor_insert_product_success">Product added successfully</string>
    <string name="editor_update_product_failed">Error encountered when updating product</string>
    <string name="editor_update_product_success">Product updated successfully</string>
    <string name="editor_required_fields_warning">Please fill all required fields</string>
    <string name="editor_delete_product_failed">Error encountered when deleting product</string>
    <string name="editor_delete_product_success">Product deleted successfully</string>
    <string name="editor_quantity_warning">Quantity cannot go below 0</string>

    <!-- Titles for EditorActivity -->
    <string name="editor_title_new_product">Add Product</string>
    <string name="editor_title_existing_product">Edit Product</string>

    <!-- Dialog alert text for EditorActivity -->
    <string name="dialog_unsaved_changes">Discard your changes and quit editing?</string>
    <string name="dialog_discard_changes">Discard</string>
    <string name="dialog_keep_editing">Keep Editing</string>
    <string name="dialog_delete_changes">"Delete this product?</string>
    <string name="dialog_delete_confirm">Delete</string>
    <string name="dialog_delete_cancel">Cancel</string>

</resources>
